--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,6 @@ spring.datasource.password=root
 
 
 spring.jpa.hibernate.ddl-auto=update
-#spring.security.user.name=test
-#spring.security.user.password=test
+spring.security.user.name=test
+spring.security.user.password=test
 spring.jpa.show-sql=true
